docs/index.css
/* NOTE: ALL SVG STYLING SHOULD BE DONE IN JS SO THAT IMAGE EXPORT CONTAINS ALL STYLING ATTRIBUTES */

html, body {
    margin: 0;
    padding: 0;
    background-image: url("tiledspace.jpg");
    background-repeat: repeat;
    overflow: hidden;
    height: 100vh;
    width: 100vw;
}

.brushcursor {
    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🖌</text></svg>") 0 16,auto;
}

.fillcursor {
    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🪣</text></svg>") 16 0,auto;
}

.eyedroppercursor {
    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>💧</text></svg>") 20 0,auto;
}

.erasercursor {
    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='font-size:24px;'><text y='50%'>🧻</text></svg>") 0 0,auto;
}

.movecursor {
    cursor: move;
}

.btn {
    width: 35px;
    height: 35px;
    background-color: white;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 21px;
    border: none;
}
.btn.selected {
    background: #91b985;
}

.btn > label {
    cursor: pointer;
}

.toolbar {
    padding: 1rem;
    position: absolute;
    max-height: 100%;
}

.bottom {
    bottom: 0;
}

.control-panel {
    padding: 10px;
}

.swatch {
    width: 21px;
    height: 21px;
    cursor: pointer;
    border: 1px solid grey;
}

/* The whole entire hex map */
#hexmap {
    display: block;
    width: 100vw;
    height: 100vh;
}

#textFontSize {
    width: 75px;
    height: 50px;
    paadding: 0;
    margin: 0;
    font-size: 20px;
    text-align: right;
}

.grid-dimension {
    width: 30px;
}

/* Composible properties */
.hidden {
    display: none !important;
}

.disabled-btn {
    cursor: default !important;
    filter: saturate(0%);
    background: #ccc;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-column {
    display: flex;
    flex-direction: column;
}

.gappy {
    gap: 0.5rem;

}

.primaryselected {
    border: 5px solid black;
}

.secondaryselected {
    border: 5px dotted black;
}

.border-box {
    box-sizing: border-box;
}

.no-pointer-events {
    pointer-events: none;
}

.allow-pointer-events {
    pointer-events: auto !important;
}

.overlaid {
    border-radius: 10px 10px 10px 10px;
    overflow: scroll;
    height: fit-content;
    width: fit-content;
    background: rgba(255, 255, 255);
    align-items: center;
    box-shadow: 0 0 1px 1px #ccc;
}


.right-aligned {
    right: 0%;
}




input[type=range] {
  -webkit-appearance: none;
  max-width: 7rem;
  width: 100%;
  background: transparent;
}

input[type=range]:focus {
  outline: none;
}

input[type=range]::-webkit-slider-runnable-track {
  height: 0.9rem;
  margin: 0;
  width: 100%;
  cursor: pointer;
  background: linear-gradient(
    to bottom right,
    transparent 50%,
    #464646 50%
  );
}

input[type=range]::-moz-range-track {
  height: 0.9rem;
  margin: 0;
  width: 100%;
  cursor: pointer;
  background: linear-gradient(
    to bottom right,
    transparent 50%,
    #464646 50%
  );
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 1.5rem;
  width: 0.5rem;
  background: #ffffff;
  border: 1px solid;
  margin-top: -5px;
  border-radius: 3px;
  cursor: pointer;
}

input[type=range]:focus::-webkit-slider-thumb {
  box-shadow: 0px 0px 7px 3px #0065c4;
}

input[type=range]::-moz-range-thumb {
  -webkit-appearance: none;
  height: 1.5rem;
  width: 0.5rem;
  background: #ffffff;
  border: 1px solid;
  border-radius: 3px;
  cursor: pointer;
  margin-top: 0;
}

input[type=range]:focus::-moz-range-thumb {
  box-shadow: 0px 0px 7px 3px #0065c4;
}

.visually-hidden {
    position: absolute !important;
    height: 1px;
    width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
    white-space: nowrap; /* added line */
}

